--- a/Introduction_Vectors/Intro_Vectors.ipynb
+++ b/Introduction_Vectors/Intro_Vectors.ipynb
@@ -60,7 +60,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 32,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [
     {
@@ -72,6 +72,7 @@
     }
    ],
    "source": [
+    "import numpy as np\n",
     "u = np.array([1,-2,4])\n",
     "v = np.array([3,5,1])\n",
     "w = np.array([2,1,-3])\n",
@@ -103,7 +104,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 38,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [
     {
@@ -117,6 +118,7 @@
     }
    ],
    "source": [
+    "import numpy as np\n",
     "u = np.array([1,-2,4])\n",
     "v = np.array([3,5,1])\n",
     "w = np.array([2,1,-3])\n",
@@ -150,7 +152,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 48,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [
     {
@@ -167,6 +169,7 @@
     }
    ],
    "source": [
+    "import numpy as np\n",
     "u = np.array([1,-2,4])\n",
     "v = np.array([3,5,1])\n",
     "w = np.array([2,1,-3])\n",
@@ -202,7 +205,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 50,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [
     {
@@ -215,6 +218,7 @@
     }
    ],
    "source": [
+    "import numpy as np\n",
     "u = np.array([1,-2,4])\n",
     "v = np.array([3,5,1])\n",
     "print(\"angle:\",u.dot(v)/(np.linalg.norm(u)*np.linalg.norm(v)))\n",
