--- a/Introduction_Vectors/Intro_Vectors.ipynb
+++ b/Introduction_Vectors/Intro_Vectors.ipynb
@@ -557,18 +557,22 @@
    "source": [
     "### 2. Repeat problem 1 with the following column vectors:\n",
     "$$\n",
-    "u = \\begin{bmatrix} 1 \\\\ 3 \\\\ -4 \\end{bmatrix}, \n",
-    "v = \\begin{bmatrix} 2 \\\\ 1 \\\\ 5 \\end{bmatrix}, \n",
-    "w = \\begin{bmatrix} 3 \\\\ -2 \\\\ 6 \\end{bmatrix}\n",
+    "\\begin{align*}\n",
+    "u &= \\begin{bmatrix} 1 \\\\ 3 \\\\ -4 \\end{bmatrix}, \n",
+    "v &= \\begin{bmatrix} 2 \\\\ 1 \\\\ 5 \\end{bmatrix}, \n",
+    "w &= \\begin{bmatrix} 3 \\\\ -2 \\\\ 6 \\end{bmatrix}\n",
+    "\\end{align*}\n",
     "$$\n",
     "#### a. $3u - 2v$\n",
     "*Manual Solution*\n",
     "$$\n",
-    "3u - 2v = 3 \\begin{bmatrix} 1 \\\\ 3 \\\\ -4 \\end{bmatrix}\n",
-    "- 2 \\begin{bmatrix} 2 \\\\ 1 \\\\ 5 \\end{bmatrix} = \n",
+    "\\begin{align*}\n",
+    "3u - 2v &= 3 \\begin{bmatrix} 1 \\\\ 3 \\\\ -4 \\end{bmatrix}\n",
+    "- 2 \\begin{bmatrix} 2 \\\\ 1 \\\\ 5 \\end{bmatrix} &= \n",
     "\\begin{bmatrix} 3 \\\\ 9 \\\\ -12 \\end{bmatrix} - \n",
-    "\\begin{bmatrix} 4 \\\\ 2 \\\\ 10 \\end{bmatrix} = \n",
+    "\\begin{bmatrix} 4 \\\\ 2 \\\\ 10 \\end{bmatrix} &= \n",
     "\\begin{bmatrix} -1 \\\\ 7 \\\\ -22 \\end{bmatrix}\n",
+    "\\end{align*}\n",
     "$$\n",
     "\n",
     "*Pythonic Solution*"
@@ -601,13 +605,15 @@
     "#### b. $5u + 3v - 4w$\n",
     "*Manual Solution*\n",
     "$$\n",
-    "5u + 3v - 4w = 5 \\begin{bmatrix} 1 \\\\ 3 \\\\ -4 \\end{bmatrix}\n",
+    "\\begin{align*}\n",
+    "5u + 3v - 4w &= 5 \\begin{bmatrix} 1 \\\\ 3 \\\\ -4 \\end{bmatrix}\n",
     "+ 3 \\begin{bmatrix} 2 \\\\ 1 \\\\ 5 \\end{bmatrix} \n",
-    "- 4 \\begin{bmatrix} 3 \\\\ -2 \\\\ 6 \\end{bmatrix} = \n",
+    "- 4 \\begin{bmatrix} 3 \\\\ -2 \\\\ 6 \\end{bmatrix} &= \n",
     "\\begin{bmatrix} 5 \\\\ 15 \\\\ -20 \\end{bmatrix} + \n",
     "\\begin{bmatrix} 6 \\\\ 3 \\\\ 15 \\end{bmatrix} -\n",
-    "\\begin{bmatrix} 12 \\\\ -8 \\\\ 24 \\end{bmatrix} =\n",
+    "\\begin{bmatrix} 12 \\\\ -8 \\\\ 24 \\end{bmatrix} &=\n",
     "\\begin{bmatrix} -1 \\\\ 26 \\\\ -29 \\end{bmatrix}\n",
+    "\\end{align*}\n",
     "$$\n",
     "\n",
     "*Pythonic Solution*"
