Added missing from Matrix Algebra

--- a/ASSIGNMENTS/Matrix_Algebra.ipynb
+++ b/ASSIGNMENTS/Matrix_Algebra.ipynb
@@ -7,7 +7,7 @@
     "#### Enrico Julian U. Absin\n",
     "#### CS 3101N\n",
     "### Matrix Algebra\n",
-    "# <font color = black> Code Challenges</font>\n",
+    "## <font color = red> Code Challenges</font>\n",
     "1. Without the use of any python libraries or modules, develop a function that can perform matrix addition, given two numpy matrices.\n",
     "\n",
     "2. Without the use of any python libraries or modules, develop a function that can multiply two numpy matrices.\n",
@@ -21,7 +21,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -203,6 +203,7 @@
     }
    ],
    "source": [
+    "#5.#\n",
     "def matrix_trace(A):\n",
     "  if not np.array_equal(A.shape, A.T.shape):\n",
     "    raise ValueError(\"Input matrix must be square.\")\n",
@@ -220,6 +221,646 @@
     "print(\"Matrix A:\")\n",
     "print(A)\n",
     "print(\"Trace of A:\", trace)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "---\n",
+    "## <font color = red> Problem Solving</font>\n",
+    "---\n",
+    "1. Solve $X$ given that:\n",
+    "\\begin{equation}\n",
+    "A =\n",
+    "\\begin{bmatrix}\n",
+    "1 & 2 \\\\\n",
+    "3 & 4 \\\\\n",
+    "\\end{bmatrix},\n",
+    "B =\n",
+    "\\begin{bmatrix}\n",
+    "-1 & 0 \\\\\n",
+    "1 & 1 \\\\\n",
+    "\\end{bmatrix}\n",
+    "\\end{equation}\n",
+    "- $3X = A-2B$ <br>\n",
+    "**Manual Solution:**\n",
+    "    - 2B\n",
+    "    $\n",
+    "     \\begin{equation}\n",
+    "     2\n",
+    "        \\begin{bmatrix}\n",
+    "            -1 & 0\\\\\n",
+    "            1 & 1\\\\\n",
+    "        \\end{bmatrix}\n",
+    "        \\xrightarrow[]{}\n",
+    "        \\begin{bmatrix}\n",
+    "            -2 & 0\\\\\n",
+    "            2 & 2\\\\\n",
+    "        \\end{bmatrix}\n",
+    "    \\end{equation}\n",
+    "    $ \n",
+    "    - A - B\n",
+    "    \\begin{equation}\n",
+    "        \\begin{bmatrix}\n",
+    "            1 & 2\\\\\n",
+    "            3 & 4\\\\\n",
+    "        \\end{bmatrix}\n",
+    "        \\begin{bmatrix}\n",
+    "            -2 & 0\\\\\n",
+    "            2 & 2\\\\\n",
+    "        \\end{bmatrix}\n",
+    "        \\xrightarrow[]{}\n",
+    "        \\begin{bmatrix}\n",
+    "            3 & 2\\\\\n",
+    "            1 & 2\\\\\n",
+    "        \\end{bmatrix}\n",
+    "    \\end{equation}\n",
+    "    - Isolate $X$ by dividing by 3\n",
+    "    \\begin{equation}\n",
+    "        \\frac{1}{3}\n",
+    "        \\begin{bmatrix}\n",
+    "            3 & 2\\\\\n",
+    "            1 & 2\\\\\n",
+    "        \\end{bmatrix}\n",
+    "        \\xrightarrow[]{}     \n",
+    "        \\begin{bmatrix}\n",
+    "            1 & \\frac{2}{3}\\\\\n",
+    "            \\frac{1}{3} & \\frac{2}{3}\\\\\n",
+    "        \\end{bmatrix}\n",
+    "    \\end{equation}\n",
+    "\n",
+    "    **Pythonic Solution:**"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 6,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "X:\n",
+      "[[1.         0.66666667]\n",
+      " [0.33333333 0.66666667]]\n"
+     ]
+    }
+   ],
+   "source": [
+    "A = np.array([[1, 2], [3, 4]])\n",
+    "B = np.array([[-1, 0], [1, 1]])\n",
+    "\n",
+    "X = (A - 2 * B) / 3 #Calculates the equation\n",
+    "\n",
+    "print(\"X:\")\n",
+    "print(X)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "- $2(A-B+2X) = 3(X-B)$ <br>\n",
+    "**Manual Solution:**\n",
+    "    - Distribute the values:\n",
+    "    <br>\n",
+    "    \\begin{equation}\n",
+    "    2A - 2B + 4X = 3X - 3B\n",
+    "    \\end{equation}\n",
+    "    - Combine the similar terms:\n",
+    "    <br>\n",
+    "    \\begin{equation}\n",
+    "    2A + B = X\n",
+    "    \\end{equation}\n",
+    "    - Substitution:\n",
+    "     \\begin{equation}\n",
+    "        X\n",
+    "        \\xrightarrow[]{}\n",
+    "        -B - 2A\n",
+    "        \\xrightarrow[]{}\n",
+    "          -\n",
+    "        \\begin{bmatrix}\n",
+    "            -1 & 0\\\\\n",
+    "            1 & 1\\\\\n",
+    "        \\end{bmatrix}\n",
+    "          -2\n",
+    "        \\begin{bmatrix}\n",
+    "            1 & 2\\\\\n",
+    "            3 & 4\\\\\n",
+    "        \\end{bmatrix}\n",
+    "    \\end{equation}\n",
+    "    - Multiplication and addition of matrix:\n",
+    "     \\begin{equation}\n",
+    "        X\n",
+    "        \\xrightarrow[]{}\n",
+    "          -\n",
+    "        \\begin{bmatrix}\n",
+    "            -1 & 0\\\\\n",
+    "            1 & 1\\\\\n",
+    "        \\end{bmatrix}\n",
+    "          -    \n",
+    "        \\begin{bmatrix}\n",
+    "            2 & 4\\\\\n",
+    "            6 & 8\\\\\n",
+    "        \\end{bmatrix}\n",
+    "        \\xrightarrow[]{}\n",
+    "        \\begin{bmatrix}\n",
+    "            -1 & -4\\\\\n",
+    "            -7 & -9\\\\\n",
+    "        \\end{bmatrix}\n",
+    "    \\end{equation}\n",
+    "\n",
+    "  **Pythonic Solution:**"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 5,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "X:\n",
+      "[[-1 -4]\n",
+      " [-7 -9]]\n"
+     ]
+    }
+   ],
+   "source": [
+    "X = -B - 2 * A #Calculates the equation\n",
+    "\n",
+    "print(\"X:\")\n",
+    "print(X)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "2. Write $B$ as a linear combination of the other matrices, if possible.\n",
+    "\\begin{equation}\n",
+    "A_1 =\n",
+    "\\begin{bmatrix}\n",
+    "1 & 2 \\\\\n",
+    "-1 & 1 \\\\\n",
+    "\\end{bmatrix},\n",
+    "A_2 =\n",
+    "\\begin{bmatrix}\n",
+    "0 & 1 \\\\\n",
+    "2 & 1 \\\\\n",
+    "\\end{bmatrix},\n",
+    "B =\n",
+    "\\begin{bmatrix}\n",
+    "2 & 5 \\\\\n",
+    "0 & 3 \\\\\n",
+    "\\end{bmatrix}\n",
+    "\\end{equation}\n",
+    "<br><br>\n",
+    "$B = x_1 * A_1 + x_2 * A_2$\n",
+    "\n",
+    "<br><br>\n",
+    "$\n",
+    "    \\begin{equation}\n",
+    "        x_1\n",
+    "        \\begin{bmatrix}\n",
+    "            1 & 2\\\\\n",
+    "            -1 & 1\\\\\n",
+    "        \\end{bmatrix}\n",
+    "        + \n",
+    "        \\begin{bmatrix}\n",
+    "            0 & 1\\\\\n",
+    "            2 & 1\\\\\n",
+    "        \\end{bmatrix}\n",
+    "        =\n",
+    "        \\begin{bmatrix}\n",
+    "            2 & 5\\\\\n",
+    "            0 & 3\\\\\n",
+    "        \\end{bmatrix}\n",
+    "    \\end{equation}\n",
+    "$\n",
+    "    $x_1 + 0x_2 = 2$<br>\n",
+    "    $2x_1 + x_2 = 5$<br>\n",
+    "    $-x_1 + 2x_2 = 0$<br>\n",
+    "    $x_1 + x_2 = 3$<br><br>\n",
+    "This gives us the values of $x_1$ and $x_2$:<br>\n",
+    "    $x_1 = 2$<br>\n",
+    "    $x_2 = 1$<br>\n",
+    "<br>which gives the combination:<br>\n",
+    "$B = 2 * A_1 + A_2$\n"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "$\n",
+    "\\begin{equation}\n",
+    "A_1 =\n",
+    "\\begin{bmatrix}\n",
+    "1 & 0 \\\\\n",
+    "0 & 1 \\\\\n",
+    "\\end{bmatrix},\n",
+    "A_2 =\n",
+    "\\begin{bmatrix}\n",
+    "0 & 1 \\\\\n",
+    "1 & 0 \\\\\n",
+    "\\end{bmatrix},\n",
+    "A_3 =\n",
+    "\\begin{bmatrix}\n",
+    "1 & -1 \\\\\n",
+    "1 & 1 \\\\\n",
+    "\\end{bmatrix},\n",
+    "B =\n",
+    "\\begin{bmatrix}\n",
+    "2 & 5 \\\\\n",
+    "0 & 3 \\\\\n",
+    "\\end{bmatrix}\n",
+    "\\end{equation}\n",
+    "$\n",
+    "<br>\n",
+    "<br>\n",
+    "$B = c_1 * A_1 + c_2 * A_2 + c_3 * A_3$\n",
+    "<br><br>\n",
+    "$c_1 * A_1 + c_2 * A_2 + c_3 * A_3 = B$ \n",
+    "<br><br>\n",
+    "Substitute:\n",
+    "$\n",
+    "    \\begin{equation}\n",
+    "        c_1 *\n",
+    "        \\begin{bmatrix}\n",
+    "            1 & 0\\\\\n",
+    "            0 & 1\\\\\n",
+    "        \\end{bmatrix}\n",
+    "        +\n",
+    "        c_2 *\n",
+    "        \\begin{bmatrix}\n",
+    "            0 & 1\\\\\n",
+    "            1 & 0\\\\\n",
+    "        \\end{bmatrix}\n",
+    "        +\n",
+    "        c_3 *\n",
+    "        \\begin{bmatrix}\n",
+    "            1 & -1\\\\\n",
+    "            1 & 1\\\\\n",
+    "        \\end{bmatrix}\n",
+    "        =\n",
+    "        \\begin{bmatrix}\n",
+    "            2 & 5\\\\\n",
+    "            0 & 3\\\\\n",
+    "        \\end{bmatrix}\n",
+    "    \\end{equation}\n",
+    "$\n",
+    "<br><br>\n",
+    "$c_1 + c_3 = 2$<br>\n",
+    "$c_2 - c_3 = 5$<br>\n",
+    "$c_2 + c_3 = 0$<br>\n",
+    "$c_1 + c_3 = 3$\n",
+    "<br><br>\n",
+    "The equation $c_2 + c_3 = 0$, which is inconsistent with the other equations, yields no solutions and thus $B$ cannot be expressed as a linear combination of $A_1$, $A_2$, and $A_3$."
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "3. Given the following:\n",
+    "\\begin{equation}\n",
+    "A =\n",
+    "\\begin{bmatrix}\n",
+    "1 & 2 \\\\\n",
+    "2 & 6 \\\\\n",
+    "\\end{bmatrix},\n",
+    "b_1 =\n",
+    "\\begin{bmatrix}\n",
+    "3 \\\\\n",
+    "5 \\\\\n",
+    "\\end{bmatrix},\n",
+    "b_2 =\n",
+    "\\begin{bmatrix}\n",
+    "-1 \\\\\n",
+    "2 \\\\\n",
+    "\\end{bmatrix},\n",
+    "b_3 =\n",
+    "\\begin{bmatrix}\n",
+    "2 \\\\\n",
+    "0 \\\\\n",
+    "\\end{bmatrix}\n",
+    "\\end{equation}\n",
+    "- Find $A^{-1}$, and use this to solve for $Ax=b_1,Ax=b_2,Ax=b_3$\n",
+    "- Solve all three linear systems by row reducing the augmented matrix:\n",
+    "\\begin{equation}\n",
+    "\\begin{bmatrix}\n",
+    "\\begin{array}{c|ccc}\n",
+    "A &\n",
+    "b_1 &\n",
+    "b_2 &\n",
+    "b_3 \\\\\n",
+    "\\end{array}\n",
+    "\\end{bmatrix}\n",
+    "\\end{equation}"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "$ A^{-1} = (\\frac{1}{det(A)}) * \n",
+    "\\begin{bmatrix}\n",
+    "d & -b \\\\\n",
+    "-c & a \\\\\n",
+    "\\end{bmatrix} \\\\  $\n",
+    "\n",
+    "$ det(A) = (1 * 6) - (2 * 2) = 6 - 4 = 2 $ \n",
+    "\n",
+    "$ A^{-1} = (\\frac{1}{2}) * \n",
+    "\\begin{bmatrix}\n",
+    "6 & -2 \\\\\n",
+    "-2 & 1 \\\\\n",
+    "\\end{bmatrix} = \n",
+    "\\begin{bmatrix}\n",
+    "3 & -1 \\\\\n",
+    "-1 & \\frac{1}{2} \\\\\n",
+    "\\end{bmatrix} \\\\ \n",
+    "$\n",
+    "\n",
+    "$ A | b_1 = \\begin{bmatrix}\\begin{array}{cc|c}\n",
+    "1 & 2 & 3 \\\\\n",
+    "2 & 6 & 5 \\\\\n",
+    "\\end{array}\\end{bmatrix}\n",
+    "\\xrightarrow{\\text{R}_{2}-2\\text{R}_{1}} \n",
+    "\\begin{bmatrix}\\begin{array}{cc|c}\n",
+    "1 & 2 & 3 \\\\\n",
+    "0 & 2 & -1 \\\\\n",
+    "\\end{array}\\end{bmatrix}\n",
+    "\\xrightarrow{\\frac{1}{2}R_2}\n",
+    "\\begin{bmatrix}\\begin{array}{cc|c}\n",
+    "1 & 2 & 3 \\\\\n",
+    "0 & 1 & -0.5 \\\\\n",
+    "\\end{array}\\end{bmatrix}\n",
+    "\\xrightarrow{\\text{R}_{1}-2\\text{R}_{2}} \n",
+    "\\begin{bmatrix}\\begin{array}{cc|c}\n",
+    "1 & 0 & 4 \\\\\n",
+    "0 & 1 & -0.5 \\\\\n",
+    "\\end{array}\\end{bmatrix} \\\\\n",
+    "{A | b_1: x_1 = 4, x_2 = -0.5} \\\\\n",
+    "$\n",
+    "\n",
+    "$ A | b_2 = \\begin{bmatrix}\\begin{array}{cc|c}\n",
+    "1 & 2 & -1 \\\\\n",
+    "2 & 6 & 2 \\\\\n",
+    "\\end{array}\\end{bmatrix}\n",
+    "\\xrightarrow{\\text{R}_{2}-2\\text{R}_{1}} \n",
+    "\\begin{bmatrix}\\begin{array}{cc|c}\n",
+    "1 & 2 & -1 \\\\\n",
+    "0 & 2 & 4 \\\\\n",
+    "\\end{array}\\end{bmatrix}\n",
+    "\\xrightarrow{\\frac{1}{2}R_2}\n",
+    "\\begin{bmatrix}\\begin{array}{cc|c}\n",
+    "1 & 2 & -1 \\\\\n",
+    "0 & 1 & 2 \\\\\n",
+    "\\end{array}\\end{bmatrix}\n",
+    "\\xrightarrow{\\text{R}_{1}-2\\text{R}_{2}} \n",
+    "\\begin{bmatrix}\\begin{array}{cc|c}\n",
+    "1 & 0 & -5 \\\\\n",
+    "0 & 1 & 2 \\\\\n",
+    "\\end{array}\\end{bmatrix} \\\\\n",
+    "{A | b_2: x_1 = -5, x_2 = 2} \\\\ $\n",
+    "\n",
+    "$ A | b_3 = \\begin{bmatrix}\\begin{array}{cc|c}\n",
+    "1 & 2 & 2 \\\\\n",
+    "2 & 6 & 0 \\\\\n",
+    "\\end{array}\\end{bmatrix}\n",
+    "\\xrightarrow{\\text{R}_{2}-2\\text{R}_{1}} \n",
+    "\\begin{bmatrix}\\begin{array}{cc|c}\n",
+    "1 & 2 & 2 \\\\\n",
+    "0 & 2 & -4 \\\\\n",
+    "\\end{array}\\end{bmatrix}\n",
+    "\\xrightarrow{\\frac{1}{2}R_2}\n",
+    "\\begin{bmatrix}\\begin{array}{cc|c}\n",
+    "1 & 2 & 2 \\\\\n",
+    "0 & 1 & -2 \\\\\n",
+    "\\end{array}\\end{bmatrix}\n",
+    "\\xrightarrow{\\text{R}_{1}-2\\text{R}_{2}} \n",
+    "\\begin{bmatrix}\\begin{array}{cc|c}\n",
+    "1 & 0 & 6 \\\\\n",
+    "0 & 1 & -2 \\\\\n",
+    "\\end{array}\\end{bmatrix} \\\\\n",
+    "\\underline{A | b_3: x_1 = 6, x_2 = -2} \\\\\n",
+    "$"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "4. In each given, determine if $b$ in in $col(A)$, and $w$ is in $row(A)$\n",
+    "\\begin{equation}\n",
+    "A =\n",
+    "\\begin{bmatrix}\n",
+    "1 & 0 & -1 \\\\\n",
+    "1 & 1 & 1 \\\\\n",
+    "\\end{bmatrix},\n",
+    "b =\n",
+    "\\begin{bmatrix}\n",
+    "3 \\\\\n",
+    "2 \\\\\n",
+    "\\end{bmatrix},\n",
+    "w =\n",
+    "\\begin{bmatrix}\n",
+    "-1 &\n",
+    "1 &\n",
+    "1\n",
+    "\\end{bmatrix},\n",
+    "\\end{equation}\n",
+    "**Perform row operations to echelon form:**\n",
+    "$$\n",
+    "\\begin{bmatrix}\\begin{array}{ccc|c}\n",
+    "1 & 0 & -1 & 3\\\\\n",
+    "1 & 1 & 1 & 2\\\\\n",
+    "\\end{array}\\end{bmatrix}\n",
+    "\\xrightarrow{\\text{R}_{2}-\\text{R}_{1}} \n",
+    "\\begin{bmatrix}\\begin{array}{ccc|c}\n",
+    "1 & 0 & -1 & 3\\\\\n",
+    "0 & 1 & 2 & -1\\\\\n",
+    "\\end{array}\\end{bmatrix}\n",
+    "$$\n",
+    "$$\n",
+    "\\begin{bmatrix}\\begin{array}{ccc}\n",
+    "1 & 0 & -1\\\\\n",
+    "1 & 1 & 2\\\\\n",
+    "\\end{array}\\end{bmatrix}\n",
+    "$$\n",
+    "<br />\n",
+    "\n",
+    "$b$ is in $col(A)$ because it is consistent and has a unique solution, while $w$ is in $row(A)$ because it satisfies the equation\n",
+    "$ \n",
+    "w = y_1\n",
+    "\\begin{bmatrix}\n",
+    "-1 & 0 & -1\n",
+    "\\end{bmatrix} + y_2\n",
+    "\\begin{bmatrix}\n",
+    "1 & 1 & 1\n",
+    "\\end{bmatrix}\n",
+    "$ \n",
+    "."
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "\\begin{equation}\n",
+    "A =\n",
+    "\\begin{bmatrix}\n",
+    "1 & 1 & -1 \\\\\n",
+    "1 & 3 & 0 \\\\\n",
+    "3 & -1 & -5 \\\\\n",
+    "\\end{bmatrix},\n",
+    "b =\n",
+    "\\begin{bmatrix}\n",
+    "1 \\\\\n",
+    "2 \\\\\n",
+    "1 \\\\\n",
+    "\\end{bmatrix},\n",
+    "w =\n",
+    "\\begin{bmatrix}\n",
+    "1 &\n",
+    "-3 &\n",
+    "-3\n",
+    "\\end{bmatrix},\n",
+    "\\end{equation}\n",
+    "**Perform row operations to echelon form:**\n",
+    "$$\n",
+    "\\begin{bmatrix}\\begin{array}{ccc|c}\n",
+    "1 & 1 & -1 & 1\\\\\n",
+    "1 & 3 & 0 & 2\\\\\n",
+    "3 & -1 & -5 & 1\\\\\n",
+    "\\end{array}\\end{bmatrix}\n",
+    "\\xrightarrow{\\text{R}_{2}-\\text{R}_{1},\\text{R}_{3}-\\text{R}_{1}} \n",
+    "\\begin{bmatrix}\\begin{array}{ccc|c}\n",
+    "1 & 1 & -1 & 1\\\\\n",
+    "0 & 2 & 1 & 1\\\\\n",
+    "0 & -4 & -2 & -2\\\\\n",
+    "\\end{array}\\end{bmatrix}\n",
+    "$$\n",
+    "\n",
+    "$$\n",
+    "\\begin{bmatrix}\\begin{array}{ccc|c}\n",
+    "1 & 1 & -1 & 1\\\\\n",
+    "0 & 2 & 1 & 1\\\\\n",
+    "0 & -4 & -2 & -2\\\\\n",
+    "\\end{array}\\end{bmatrix}\n",
+    "\\xrightarrow{\\text{R}_{2}/\\text{2}} \n",
+    "\\begin{bmatrix}\\begin{array}{ccc|c}\n",
+    "1 & 1 & -1 & 1\\\\\n",
+    "0 & 1 & \\frac{1}{2} & \\frac{1}{2}\\\\\n",
+    "0 & -4 & -2 & -2\\\\\n",
+    "\\end{array}\\end{bmatrix}\n",
+    "$$\n",
+    "\n",
+    "$$\n",
+    "\\begin{bmatrix}\\begin{array}{ccc|c}\n",
+    "1 & 1 & -1 & 1\\\\\n",
+    "0 & 1 & \\frac{1}{2} & \\frac{1}{2}\\\\\n",
+    "0 & -4 & -2 & -2\\\\\n",
+    "\\end{array}\\end{bmatrix}\n",
+    "\\xrightarrow{\\text{R}_{3}+\\text{4}(\\text{R}_{2})} \n",
+    "\\begin{bmatrix}\\begin{array}{ccc|c}\n",
+    "1 & 1 & -1 & 1\\\\\n",
+    "0 & 1 & \\frac{1}{2} & \\frac{1}{2}\\\\\n",
+    "0 & 0 & 0 & 0\\\\\n",
+    "\\end{array}\\end{bmatrix}\n",
+    "$$\n",
+    "\n",
+    "$$\n",
+    "\\begin{bmatrix}\\begin{array}{ccc|c}\n",
+    "1 & 1 & -1\\\\\n",
+    "0 & 1 & \\frac{1}{2}\\\\\n",
+    "0 & 0 & 0\\\\\n",
+    "\\end{array}\\end{bmatrix}\n",
+    "$$\n",
+    "\n",
+    "Therefore, $b$ is in $col(A)$ and $w$ is in $row(A)$.\n"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "5. Find the rank and nullity of:\n",
+    "$\n",
+    "\\begin{bmatrix}\n",
+    "2 & 4 & 0 & 0 & 1 \\\\\n",
+    "6 & 3 & 5 & 1 & 0 \\\\\n",
+    "1 & 0 & 2 & 2 & 5 \\\\\n",
+    "1 & 1 & 1 & 1 & 1 \\\\\n",
+    "\\end{bmatrix}\n",
+    "$"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "$\n",
+    " \\begin{equation}\n",
+    "    \\begin{bmatrix}\n",
+    "        2 & 4 & 0 & 0 & 1 \\\\\n",
+    "        6 & 3 & 5 & 1 & 0 \\\\\n",
+    "        1 & 0 & 2 & 2 & 5 \\\\\n",
+    "        1 & 1 & 1 & 1 & 1 \\\\\n",
+    "    \\end{bmatrix}\n",
+    "    \\xrightarrow[]{R_2 - 3R_1}\n",
+    "    \\begin{bmatrix}\n",
+    "        2 & 4 & 0 & 0 & 1 \\\\\n",
+    "        0 & -9 & 5 & 1 & -3 \\\\\n",
+    "        1 & 0 & 2 & 2 & 5 \\\\\n",
+    "        1 & 1 & 1 & 1 & 1 \\\\\n",
+    "    \\end{bmatrix}\n",
+    "    \\xrightarrow[]{R_3 - \\frac{1}{2}R_1}\n",
+    "    \\begin{bmatrix}\n",
+    "        2 & 4 & 0 & 0 & 1 \\\\\n",
+    "        0 & -9 & 5 & 1 & -3 \\\\\n",
+    "        0 & 2 & 2 & 2 & 4.5 \\\\\n",
+    "        1 & 1 & 1 & 1 & 1 \\\\\n",
+    "    \\end{bmatrix}\n",
+    "    \\xrightarrow[]{R_1 - 2}\n",
+    "    \\begin{bmatrix}\n",
+    "        0 & 2 & -2 & -2 & -3 \\\\\n",
+    "        0 & -9 & 5 & 1 & -3 \\\\\n",
+    "        0 & 2 & 2 & 2 & 4.5 \\\\\n",
+    "        1 & 1 & 1 & 1 & 1 \\\\\n",
+    "    \\end{bmatrix}\n",
+    "    \\xrightarrow[]{R_3 - R_1}\n",
+    "    \\begin{bmatrix}\n",
+    "        0 & 2 & -2 & -2 & -3 \\\\\n",
+    "        0 & -9 & 5 & 1 & -3 \\\\\n",
+    "        0 & 0 & 4 & 4 & 7.5 \\\\\n",
+    "        1 & 1 & 1 & 1 & 1 \\\\\n",
+    "    \\end{bmatrix}\n",
+    "    \\xrightarrow[]{R_1(R_4)}\n",
+    "    \\begin{bmatrix}\n",
+    "        1 & 2 & -2 & -2 & -3 \\\\\n",
+    "        0 & -9 & 5 & 1 & -3 \\\\\n",
+    "        0 & 0 & 4 & 4 & 7.5 \\\\\n",
+    "        1 & 1 & 1 & 1 & 1 \\\\\n",
+    "    \\end{bmatrix}\n",
+    "    \\xrightarrow[]{R_4 - 1}\n",
+    "    \\begin{bmatrix}\n",
+    "        1 & 2 & -2 & -2 & -3 \\\\\n",
+    "        0 & -9 & 5 & 1 & -3 \\\\\n",
+    "        0 & 0 & 4 & 4 & 7.5 \\\\\n",
+    "        0 & 0 & 0 & 0 & 0 \\\\\n",
+    "    \\end{bmatrix}\n",
+    "\\end{equation}\n",
+    "$\n",
+    "\n",
+    "\n",
+    "Therefore, the rank of the matrix is 4 while its nullity is 1."
    ]
   }
  ],
