--- a/ASSIGNMENTS/System_of_Linear_Equations.ipynb
+++ b/ASSIGNMENTS/System_of_Linear_Equations.ipynb
@@ -15,7 +15,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -24,7 +24,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -89,7 +89,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 19,
+   "execution_count": 7,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -815,7 +815,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 24,
+   "execution_count": 8,
    "metadata": {},
    "outputs": [
     {
@@ -951,7 +951,7 @@
     "print(\"A12\")\n",
     "print(A,'\\n')\n",
     "\n",
-    "last_entries = [] #to get the coefficient array for b\n",
+    "last_entries = [] \n",
     "for row in A:\n",
     "    last_entry = row[-1]\n",
     "    last_entries.append(last_entry)\n",
@@ -962,6 +962,456 @@
     "\n",
     "print(\"Solution to vectors x, y, z, w:\")\n",
     "print(solution)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "6. Determine if the vectors are linear combinations<br>\n",
+    "a. <br>\n",
+    "$\n",
+    " \\begin{equation}\n",
+    "    \\textbf{v} = \\begin{bmatrix} 1 \\\\ 2 \\end{bmatrix} \\ \n",
+    "    \\textbf{u}_2 = \\begin{bmatrix} -1 \\\\ 3 \\end{bmatrix}\\\n",
+    "    \\textbf{u}_3 = \\begin{bmatrix} 2 \\\\ -6 \\end{bmatrix}\\\\\n",
+    "\\end{equation}\n",
+    "$\n",
+    "<br>\n",
+    "$\n",
+    "\\begin{equation}\n",
+    "    \\begin{bmatrix} 1 \\\\ 2 \\end{bmatrix}x +\n",
+    "    \\begin{bmatrix} -1 \\\\ 3 \\end{bmatrix}y =\n",
+    "    \\begin{bmatrix} 2 \\\\ -6 \\end{bmatrix}\n",
+    "\\end{equation}\n",
+    "$\n",
+    "<br>\n",
+    "<br>\n",
+    "$\n",
+    "\\begin{equation}\n",
+    "    \\begin{bmatrix}\n",
+    "        -1 & 2 & 1 \\\\\n",
+    "        3 & -6 & 2\n",
+    "    \\end{bmatrix}\n",
+    "    \\xrightarrow[]{\\text{R}_{2} + 3\\text{R}_{1}}\n",
+    "    \\begin{bmatrix}\n",
+    "        -1 & 2 & 1 \\\\\n",
+    "        0 & 0 & 5\n",
+    "    \\end{bmatrix}\n",
+    "\\end{equation}\n",
+    "$\n",
+    "<br>\n",
+    "<br>**Not a linear combination**<br>"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 13,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Not a linear combination.\n"
+     ]
+    }
+   ],
+   "source": [
+    "import numpy as np\n",
+    "\n",
+    "v = np.array([1, 2])\n",
+    "u2 = np.array([-1, 3])\n",
+    "u3 = np.array([2, -6])\n",
+    "\n",
+    "coeff_matrix = np.vstack((u2, u3)).T\n",
+    "constants = v\n",
+    "\n",
+    "if np.linalg.matrix_rank(coeff_matrix) == np.linalg.matrix_rank(np.vstack((coeff_matrix, constants)).T):\n",
+    "    print(\"Is a linear combination.\")\n",
+    "else:\n",
+    "    print(\"Not a linear combination.\")"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "b. <br>\n",
+    "$\n",
+    " \\begin{equation}\n",
+    "    \\textbf{v} = \\begin{bmatrix} 1 \\\\ 2 \\\\ 3 \\end{bmatrix} \\ \n",
+    "    \\textbf{u}_2 = \\begin{bmatrix} 1 \\\\ 1 \\\\ 0 \\end{bmatrix}\\\n",
+    "    \\textbf{u}_3 = \\begin{bmatrix} 0 \\\\ 1 \\\\ 1 \\end{bmatrix}\\\\\n",
+    "\\end{equation}\n",
+    "$\n",
+    "<br>\n",
+    "$\n",
+    " \\begin{equation}\n",
+    "    \\begin{bmatrix}\n",
+    "        1 & 0 | 1\\\\\n",
+    "        1 & 1 | 2\\\\\n",
+    "        0 & 1 | 3\\\\\n",
+    "    \\end{bmatrix}\n",
+    "    \\xrightarrow[]{R_2 - x + 2_y = -12_x + y + z = 1 - x + y - z = -1}\n",
+    "    \\begin{bmatrix}\n",
+    "        1 & 0 | 1\\\\\n",
+    "        1 & 1 | 1\\\\\n",
+    "        0 & 1 | 3\\\\\n",
+    "    \\end{bmatrix}\n",
+    "    \\xrightarrow[]{R_3 - R_2}   \n",
+    "    \\begin{bmatrix}\n",
+    "        1 & 0 | 1\\\\\n",
+    "        0 & 1 | 1\\\\\n",
+    "        0 & 0 | 2\\\\\n",
+    "    \\end{bmatrix}\n",
+    "\\end{equation}\n",
+    "$\n",
+    "<br>\n",
+    "<br>**Not a linear combination.**<br>"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 14,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Not a linear combination.\n"
+     ]
+    }
+   ],
+   "source": [
+    "v = np.array([1, 2, 3])\n",
+    "u2 = np.array([1, 1, 0])\n",
+    "u3 = np.array([0, 1, 1])\n",
+    "\n",
+    "coeff_matrix = np.vstack((u2, u3)).T\n",
+    "constants = v\n",
+    "\n",
+    "if np.linalg.matrix_rank(coeff_matrix) == np.linalg.matrix_rank(np.column_stack((coeff_matrix, constants))):\n",
+    "    print(\"Is a linear combination.\")\n",
+    "else:\n",
+    "    print(\"Not a linear combination.\")"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "c. <br>\n",
+    "$\n",
+    " \\begin{equation}\n",
+    "    \\textbf{v} = \\begin{bmatrix} 3 \\\\ 1 \\\\ -2 \\end{bmatrix} \\ \n",
+    "    \\textbf{u}_2 = \\begin{bmatrix} 1 \\\\ 1 \\\\ 0 \\end{bmatrix}\\\n",
+    "    \\textbf{u}_3 = \\begin{bmatrix} 0 \\\\ 1 \\\\ 1 \\end{bmatrix}\\\\\n",
+    "\\end{equation}\n",
+    "$\n",
+    "<br>\n",
+    "$\n",
+    "\\begin{equation}\n",
+    "    \\begin{bmatrix} 1 \\\\ 1 \\\\ 0\\end{bmatrix}x +\n",
+    "    \\begin{bmatrix} 0 \\\\ 1 \\\\ 1\\end{bmatrix}y =\n",
+    "    \\begin{bmatrix} 3 \\\\ 1 \\\\ -2\\end{bmatrix}\n",
+    "\\end{equation}\n",
+    "$\n",
+    "<br>\n",
+    "$\n",
+    "\\begin{equation}\n",
+    "    \\begin{bmatrix}\n",
+    "        1 & 0 & 3 \\\\\n",
+    "        1 & 1 & 1 \\\\\n",
+    "        0 & 1 & -2\\\\\n",
+    "    \\end{bmatrix}\n",
+    "    x = 3,y = -2,x + y = 1x + y = 1 \\xrightarrow[]{} 3 - 2 = 1\n",
+    "\\end{equation}\n",
+    "$\n",
+    "<br>\n",
+    "$\n",
+    "\\begin{equation}\n",
+    "    \\begin{bmatrix} 3 \\\\ 3 \\\\ 0\\end{bmatrix} +\n",
+    "    \\begin{bmatrix} 0 \\\\ -2 \\\\ -2\\end{bmatrix} =\n",
+    "    \\begin{bmatrix} 3 \\\\ 1 \\\\ -2\\end{bmatrix}\n",
+    "\\end{equation}\n",
+    "$\n",
+    "<br>\n",
+    "<br>**Is a linear combination.**<br>"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 15,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Is a linear combination.\n"
+     ]
+    }
+   ],
+   "source": [
+    "v = np.array([3, 1, -2])\n",
+    "u2 = np.array([0, -2, -2])\n",
+    "u3 = np.array([3, 1, -2])\n",
+    "\n",
+    "coeff_matrix = np.vstack((u2, u3)).T\n",
+    "constants = v\n",
+    "\n",
+    "if np.linalg.matrix_rank(coeff_matrix) == np.linalg.matrix_rank(np.column_stack((coeff_matrix, constants))):\n",
+    "    print(\"Is a linear combination.\")\n",
+    "else:\n",
+    "    print(\"Not a linear combination.\")"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "<br>8. Show that the followwing vectors are linearly independent:\n",
+    "<br>a.\n",
+    "a. <br>\n",
+    "$\n",
+    "\\begin{equation}\n",
+    "\\begin{bmatrix} 3 \\\\ -1 \\\\ 1 \\\\ -1 \\end{bmatrix}\n",
+    "\\begin{bmatrix} -1 \\\\ 2 \\\\ 1 \\\\ -1 \\end{bmatrix}\n",
+    "\\begin{bmatrix} 1 \\\\ 1 \\\\ 3 \\\\ 1 \\end{bmatrix}\n",
+    "\\begin{bmatrix} -1 \\\\ -1 \\\\ 1 \\\\ 3 \\end{bmatrix}\n",
+    "\\end{equation} \n",
+    "$\n",
+    "<br>Transform it into reduced echelon form. <br><br>\n",
+    "$\n",
+    "    \\begin{pmatrix}\n",
+    "    3 & -1 & 1 & -1 \\\\\n",
+    "    -1 & 2 & 1 & -1 \\\\\n",
+    "    1 & 1 & 3 & 1 \\\\\n",
+    "    -1 & -1 & 1 & 3\\\\\n",
+    "    \\end{pmatrix}\n",
+    "    \\xrightarrow{\\text{R}_{1} \\leftrightarrow \\text{R}_{3}}\n",
+    "    \\begin{pmatrix}\n",
+    "    1 & 1 & 3 & 1 \\\\\n",
+    "    -1 & 2 & 1 & -1 \\\\\n",
+    "    3 & -1 & 1 & -1 \\\\\n",
+    "    -1 & -1 & 1 & 3\\\\\n",
+    "    \\end{pmatrix}\n",
+    "    \\xrightarrow{\\text{R}_{2} + \\text{R}_{1}}\n",
+    "    \\begin{pmatrix}\n",
+    "    1 & 1 & 3 & 1 \\\\\n",
+    "    0 & 3 & 4 & 0 \\\\\n",
+    "    3 & -1 & 1 & -1 \\\\\n",
+    "    -1 & -1 & 1 & 3\\\\\n",
+    "    \\end{pmatrix}\n",
+    "    \\xrightarrow{\\text{R}_{3} - 3\\text{R}_{1}}\n",
+    "    \\begin{pmatrix}\n",
+    "    1 & 1 & 3 & 1 \\\\\n",
+    "    0 & 3 & 4 & 0 \\\\\n",
+    "    0 & -4 & -8 & -4 \\\\\n",
+    "    -1 & -1 & 1 & 3\\\\\n",
+    "    \\end{pmatrix}\n",
+    "    \\xrightarrow{\\text{R}_{4} + \\text{R}_{1}}\n",
+    "    \\begin{pmatrix}\n",
+    "    1 & 1 & 3 & 1 \\\\\n",
+    "    0 & 3 & 4 & 0 \\\\\n",
+    "    0 & -4 & -8 & -4 \\\\\n",
+    "    0 & 0 & 4 & 4\\\\\n",
+    "    \\end{pmatrix}\n",
+    "    $ <br><br> \n",
+    "    $\n",
+    "    \\xrightarrow[\\frac{1}{4}\\text{R}_{3}]{\\frac{1}{4}\\text{R}_{4}}\n",
+    "    \\begin{pmatrix}\n",
+    "    1 & 1 & 3 & 1 \\\\\n",
+    "    0 & 3 & 4 & 0 \\\\\n",
+    "    0 & -1 & -2 & -1 \\\\\n",
+    "    0 & 0 & 1 & 1\\\\\n",
+    "    \\end{pmatrix}\n",
+    "    \\xrightarrow{\\text{R}_{1} + \\text{R}_{3}}\n",
+    "    \\begin{pmatrix}\n",
+    "    1 & 0 & 1 & 0 \\\\\n",
+    "    0 & 3 & 4 & 0 \\\\\n",
+    "    0 & -1 & -2 & -1 \\\\\n",
+    "    0 & 0 & 1 & 1\\\\\n",
+    "    \\end{pmatrix}\n",
+    "    \\xrightarrow{\\text{R}_{3} + \\text{R}_{4}}\n",
+    "    \\begin{pmatrix}\n",
+    "    1 & 0 & 1 & 0 \\\\\n",
+    "    0 & 3 & 4 & 0 \\\\\n",
+    "    0 & -1 & -1 & 0 \\\\\n",
+    "    0 & 0 & 1 & 1\\\\\n",
+    "    \\end{pmatrix}\n",
+    "    \\xrightarrow{\\text{R}_{2} + 3\\text{R}_{3}}\n",
+    "    \\begin{pmatrix}\n",
+    "    1 & 0 & 1 & 0 \\\\\n",
+    "    0 & 0 & 1 & 0 \\\\\n",
+    "    0 & -1 & -1 & 0 \\\\\n",
+    "    0 & 0 & 1 & 1\\\\\n",
+    "    \\end{pmatrix}\n",
+    "    \\xrightarrow[-\\text{R}_{3}]{\\text{R}_{1} - \\text{R}_{2}}\n",
+    "    \\begin{pmatrix}\n",
+    "    1 & 0 & 0 & 0 \\\\\n",
+    "    0 & 0 & 1 & 0 \\\\\n",
+    "    0 & 1 & 1 & 0 \\\\\n",
+    "    0 & 0 & 1 & 1\\\\\n",
+    "    \\end{pmatrix}\n",
+    "    \\xrightarrow[\\text{R}_{3} - \\text{R}_{2}]{\\text{R}_{4} - \\text{R}_{2}}\n",
+    "    \\begin{pmatrix}\n",
+    "    1 & 0 & 0 & 0 \\\\\n",
+    "    0 & 0 & 1 & 0 \\\\\n",
+    "    0 & 1 & 0 & 0 \\\\\n",
+    "    0 & 0 & 0 & 1\\\\\n",
+    "    \\end{pmatrix}\n",
+    "$ <br><br>\n",
+    "Each column has a leading entry that is not zero and occurs higher than any non-zero entries in the same column and also there are no non-zero rows below the last pivot element which makes this **linearly dependent**.\n",
+    "<br><br>"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "b. <br>\n",
+    "$\n",
+    "\\begin{equation}\n",
+    "\\begin{bmatrix} 0 \\\\ 0 \\\\ 0 \\\\ 1 \\end{bmatrix}\n",
+    "\\begin{bmatrix} 0 \\\\ 0 \\\\ 2 \\\\ 1 \\end{bmatrix}\n",
+    "\\begin{bmatrix} 0 \\\\ 3 \\\\ 2 \\\\ 1 \\end{bmatrix}\n",
+    "\\begin{bmatrix} 4 \\\\ 3 \\\\ 2 \\\\ 1 \\end{bmatrix}\n",
+    "\\end{equation}\n",
+    "$\n",
+    "<br><br>\n",
+    "Transform it into reduced row echelon form<br><br>\n",
+    "$\n",
+    "    \\begin{pmatrix}\n",
+    "    0 & 0 & 0 & 4 \\\\\n",
+    "    0 & 0 & 3 & 3 \\\\\n",
+    "    0 & 2 & 2 & 2 \\\\\n",
+    "    1 & 1 & 1 & 1\\\\\n",
+    "    \\end{pmatrix}\n",
+    "    \\xrightarrow[\\text{R}_{1} \\leftrightarrow \\text{R}_{4}]{\\text{R}_{2} \\leftrightarrow \\text{R}_{3}}\n",
+    "    \\begin{pmatrix}\n",
+    "    1 & 1 & 1 & 1 \\\\\n",
+    "    0 & 2 & 2 & 2 \\\\\n",
+    "    0 & 0 & 3 & 3 \\\\\n",
+    "    0 & 0 & 0 & 4 \\\\\n",
+    "    \\end{pmatrix}\n",
+    "    \\xrightarrow[\\frac{1}{2}\\text{R}_{2}]{\\frac{1}{3}\\text{R}_{3}}\n",
+    "    \\begin{pmatrix}\n",
+    "    1 & 1 & 1 & 1 \\\\\n",
+    "    0 & 1 & 1 & 1 \\\\\n",
+    "    0 & 0 & 1 & 1 \\\\\n",
+    "    0 & 0 & 0 & 4 \\\\\n",
+    "    \\end{pmatrix}\n",
+    "    \\xrightarrow[\\frac{1}{4}\\text{R}_{4}]{\\text{R}_{1} - \\text{R}_{2}}\n",
+    "    \\begin{pmatrix}\n",
+    "    1 & 0 & 0 & 0 \\\\\n",
+    "    0 & 1 & 1 & 1 \\\\\n",
+    "    0 & 0 & 1 & 1 \\\\\n",
+    "    0 & 0 & 0 & 1 \\\\\n",
+    "    \\end{pmatrix}\n",
+    "    \\xrightarrow[\\text{R}_{2} - \\text{R}_{3}]{\\text{R}_{3} - \\text{R}_{4}}\n",
+    "    \\begin{pmatrix}\n",
+    "    1 & 0 & 0 & 0 \\\\\n",
+    "    0 & 1 & 0 & 0 \\\\\n",
+    "    0 & 0 & 1 & 0 \\\\\n",
+    "    0 & 0 & 0 & 1 \\\\\n",
+    "    \\end{pmatrix}\n",
+    "    $<br><br>\n",
+    "    Since it is in its reduced row echelon form and satisfies the criteria to not be linearly dependent, therefore the vectors are **linearly independent**.<br>"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "c. <br>\n",
+    "$\n",
+    "\\begin{equation}\n",
+    "\\begin{bmatrix} 1 \\\\ -1 \\\\ 1 \\\\ 0 \\end{bmatrix}\n",
+    "\\begin{bmatrix} -1 \\\\ 1 \\\\ 0 \\\\ 1 \\end{bmatrix}\n",
+    "\\begin{bmatrix} 1 \\\\ 0 \\\\ 1 \\\\ -1 \\end{bmatrix}\n",
+    "\\begin{bmatrix} 0 \\\\ 1 \\\\ -1 \\\\ 1 \\end{bmatrix}\n",
+    "\\end{equation}\n",
+    "$\n",
+    "<br><br>\n",
+    "Transform into reduced row echelon form.<br>\n",
+    "$\n",
+    "    \\begin{pmatrix}\n",
+    "    1 & -1 & 1 & 0 \\\\\n",
+    "    -1 & 1 & 0 & 1 \\\\\n",
+    "    1 & 0 & 1 & -1 \\\\\n",
+    "    0 & 1 & -1 & 1\\\\\n",
+    "    \\end{pmatrix}\n",
+    "    \\xrightarrow{\\text{R}_{2} + \\text{R}_{3}}\n",
+    "    \\begin{pmatrix}\n",
+    "    1 & -1 & 1 & 0 \\\\\n",
+    "    0 & 1 & 1 & 0 \\\\\n",
+    "    1 & 0 & 1 & -1 \\\\\n",
+    "    0 & 1 & -1 & 1\\\\\n",
+    "    \\end{pmatrix}\n",
+    "    \\xrightarrow{\\text{R}_{3} + \\text{R}_{4}}\n",
+    "    \\begin{pmatrix}\n",
+    "    1 & -1 & 1 & 0 \\\\\n",
+    "    0 & 1 & 1 & 0 \\\\\n",
+    "    1 & 1 & 0 & 0 \\\\\n",
+    "    0 & 1 & -1 & 1\\\\\n",
+    "    \\end{pmatrix}\n",
+    "    \\xrightarrow{\\text{R}_{4} + \\text{R}_{1}}\n",
+    "    \\begin{pmatrix}\n",
+    "    1 & -1 & 1 & 0 \\\\\n",
+    "    0 & 1 & 1 & 0 \\\\\n",
+    "    1 & 1 & 0 & 0 \\\\\n",
+    "    1 & 0 & 0 & 1\\\\\n",
+    "    \\end{pmatrix}\n",
+    "    \\xrightarrow{\\text{R}_{3} - \\text{R}_{1}}\n",
+    "    \\begin{pmatrix}\n",
+    "    1 & -1 & 1 & 0 \\\\\n",
+    "    0 & 1 & 1 & 0 \\\\\n",
+    "    0 & 2 & -1 & 0 \\\\\n",
+    "    1 & 0 & 0 & 1\\\\\n",
+    "    \\end{pmatrix}\n",
+    "    \\xrightarrow{\\text{R}_{3} + \\text{R}_{2}}\n",
+    "    $<br><br>\n",
+    "    $\n",
+    "    \\begin{pmatrix}\n",
+    "    1 & -1 & 1 & 0 \\\\\n",
+    "    0 & 1 & 1 & 0 \\\\\n",
+    "    0 & 3 & 0 & 0 \\\\\n",
+    "    1 & 0 & 0 & 1\\\\\n",
+    "    \\end{pmatrix}\n",
+    "    \\xrightarrow{\\frac{1}{3}\\text{R}_{3}}\n",
+    "    \\begin{pmatrix}\n",
+    "    1 & -1 & 1 & 0 \\\\\n",
+    "    0 & 1 & 1 & 0 \\\\\n",
+    "    0 & 1 & 0 & 0 \\\\\n",
+    "    1 & 0 & 0 & 1\\\\\n",
+    "    \\end{pmatrix}\n",
+    "    \\xrightarrow[\\text{R}_{2} - \\text{R}_{3}]{\\text{R}_{1} + \\text{R}_{3}}\n",
+    "    \\begin{pmatrix}\n",
+    "    1 & 0 & 1 & 0 \\\\\n",
+    "    0 & 0 & 1 & 0 \\\\\n",
+    "    0 & 1 & 0 & 0 \\\\\n",
+    "    1 & 0 & 0 & 1\\\\\n",
+    "    \\end{pmatrix}\n",
+    "    \\xrightarrow{\\text{R}_{1} - \\text{R}_{2}}\n",
+    "    \\begin{pmatrix}\n",
+    "    1 & 0 & 0 & 0 \\\\\n",
+    "    0 & 0 & 1 & 0 \\\\\n",
+    "    0 & 1 & 0 & 0 \\\\\n",
+    "    1 & 0 & 0 & 1\\\\\n",
+    "    \\end{pmatrix}\n",
+    "    \\xrightarrow{\\text{R}_{4} - \\text{R}_{1}}\n",
+    "    \\begin{pmatrix}\n",
+    "    1 & 0 & 0 & 0 \\\\\n",
+    "    0 & 0 & 1 & 0 \\\\\n",
+    "    0 & 1 & 0 & 0 \\\\\n",
+    "    0 & 0 & 0 & 1\\\\\n",
+    "    \\end{pmatrix}\n",
+    "    $\n",
+    " <br><br>\n",
+    "Since it is in its reduced row echelon form and satisfies the criteria to not be linearly dependent, therefore the vectors are **linearly independent**."
    ]
   }
  ],
