Corrected update for systems of linear equations

--- a/ASSIGNMENTS/System_of_Linear_Equations.ipynb
+++ b/ASSIGNMENTS/System_of_Linear_Equations.ipynb
@@ -1172,9 +1172,106 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
+    "<br>7. Show that the following vectors are a span:<br>\n",
+    "a.<br>\n",
+    "$\n",
+    "span\\begin{pmatrix}\n",
+    "\\begin{bmatrix}1 \\\\ 1 \\\\ \\end{bmatrix}\n",
+    "\\begin{bmatrix}1 \\\\ -1 \\\\ \\end{bmatrix}\n",
+    "\\end{pmatrix}\n",
+    "$\n",
+    "<br><br>\n",
+    "$\n",
+    " \\begin{equation}\n",
+    "    \\begin{bmatrix}\n",
+    "        1 & 1 | x\\\\\n",
+    "        1 & -1 | y\\\\\n",
+    "    \\end{bmatrix}\n",
+    "    \\xrightarrow[]{}\n",
+    "    \\begin{bmatrix}\n",
+    "        1 & 1 | x | R_1\\\\\n",
+    "        1 & -1 | y | R_2\\\\\n",
+    "    \\end{bmatrix}\n",
+    "    \\xrightarrow[R_2 - R_1]{\\frac{1}{-2}R_2}\n",
+    "    \\begin{bmatrix}\n",
+    "        1 & 1 | x | R_1\\\\\n",
+    "        0 & 1 | y | \\frac{1}{-2}R_2\\\\\n",
+    "    \\end{bmatrix}\n",
+    "\\end{equation}\n",
+    "$\n",
+    "**It is a span.**\n",
+    "<br><br>\n",
+    "b.<br>\n",
+    "$\n",
+    "span\\begin{pmatrix}\n",
+    "\\begin{bmatrix}1 \\\\ 0 \\\\ 1\\end{bmatrix}\n",
+    "\\begin{bmatrix}1 \\\\ 1 \\\\ 0\\end{bmatrix}\n",
+    "\\begin{bmatrix}0 \\\\ 1 \\\\ 1\\end{bmatrix}\n",
+    "\\end{pmatrix}\n",
+    "$\n",
+    "<br><br>\n",
+    "$\n",
+    " \\begin{equation}\n",
+    "    \\begin{bmatrix}\n",
+    "        1 & 1 & 0| x\\\\\n",
+    "        0 & 1 & 1| y\\\\\n",
+    "        1 & 0 & 1| z\\\\\n",
+    "    \\end{bmatrix}\n",
+    "    \\xrightarrow[]{R_3 - R_1}\n",
+    "    \\begin{bmatrix}\n",
+    "        1 & 1 & 0| x\\\\\n",
+    "        0 & 1 & 1| y\\\\\n",
+    "        0 & -1 & 1| z - x\\\\\n",
+    "    \\end{bmatrix}\n",
+    "    \\xrightarrow[]{R_3 + R_2}   \n",
+    "    \\begin{bmatrix}\n",
+    "        1 & 1 & 0| x\\\\\n",
+    "        0 & 1 & 1| y\\\\\n",
+    "        0 & 0 & 2| y - x + z\\\\\n",
+    "    \\end{bmatrix}\n",
+    "\\end{equation}\n",
+    "$\n",
+    "**It is a span.**\n",
+    "<br><br>\n",
+    "c.<br>\n",
+    "$\n",
+    "span\\begin{pmatrix}\n",
+    "\\begin{bmatrix}1 \\\\ 0 \\\\ 1\\end{bmatrix}\n",
+    "\\begin{bmatrix}1 \\\\ 1 \\\\ 0\\end{bmatrix}\n",
+    "\\begin{bmatrix}0 \\\\ 1 \\\\ 1\\end{bmatrix}\n",
+    "\\end{pmatrix}\n",
+    "$\n",
+    "<br><br>\n",
+    "$\n",
+    " \\begin{equation}\n",
+    "    \\begin{bmatrix}\n",
+    "        1 & 1 & 0| x\\\\\n",
+    "        0 & 1 & 1| y\\\\\n",
+    "        1 & 0 & 1| z\\\\\n",
+    "    \\end{bmatrix}\n",
+    "    \\xrightarrow[]{R_3 - R_1}\n",
+    "    \\begin{bmatrix}\n",
+    "        1 & 1 & 0| x\\\\\n",
+    "        0 & 1 & 1| y\\\\\n",
+    "        0 & -1 & 1| z - x\\\\\n",
+    "    \\end{bmatrix}\n",
+    "    \\xrightarrow[]{R_3 + R_2}   \n",
+    "    \\begin{bmatrix}\n",
+    "        1 & 1 & 0| x\\\\\n",
+    "        0 & 1 & 1| y\\\\\n",
+    "        0 & 0 & 2| y - x + z\\\\\n",
+    "    \\end{bmatrix}\n",
+    "\\end{equation}\n",
+    "$\n",
+    "**It is a span**<br>"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
     "<br>8. Show that the followwing vectors are linearly independent:\n",
-    "<br>a.\n",
-    "a. <br>\n",
+    "<br>a.<br>\n",
     "$\n",
     "\\begin{equation}\n",
     "\\begin{bmatrix} 3 \\\\ -1 \\\\ 1 \\\\ -1 \\end{bmatrix}\n",
@@ -1264,7 +1361,7 @@
     "    0 & 0 & 0 & 1\\\\\n",
     "    \\end{pmatrix}\n",
     "$ <br><br>\n",
-    "Each column has a leading entry that is not zero and occurs higher than any non-zero entries in the same column and also there are no non-zero rows below the last pivot element which makes this **linearly dependent**.\n",
+    "Each column has a leading entry that is not zero and occurs higher than any non-zero entries in the same column and also there are no non-zero rows below the last pivot element which makes this **linearly independent**.\n",
     "<br><br>"
    ]
   },
